--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "angularjs-seed",
-  "description": "A starter project for AngularJS",
+  "name": "angularjs-phonecat",
+  "description": "A sample project for AngularJS",
   "repository": "https://github.com/angular/angular-seed",
   "devDependencies": {
     "phantomjs": "~1.9",
@@ -13,7 +13,7 @@
     "karma-html2js-preprocessor": "~0.1.0",
     "karma-requirejs": "~0.1.0",
     "karma-coffee-preprocessor": "~0.1.0",
-    "karma-phantomjs-launcher": "~0.1.0",
+    "karma-phantomjs-launcher": "~0.1.1",
     "karma-script-launcher": "~0.1.0"
   }
 }
